fix: add more horizontal spacing around monospace
Otherwise italicized monospace looks bad.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -81,7 +81,8 @@
 	background-color: var(--sl-color-black);
 	border: 1px solid var(--sl-color-gray-5);
 	border-radius: 5px;
-	padding: 0.175rem 0.175rem 0.125rem 0.175rem;
+	padding: 0.175rem 0.35rem;
+	margin: 0 0.05rem;
 	font-size: var(--sl-text-code);
 }
 
